Resolving the white space bug in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ html{
     scroll-behavior: smooth;
 }
 
-
 *{
     font-family: 'Poppins', sans-serif;
     margin: 0%;
@@ -574,8 +573,7 @@ h2{
     }
 
 }
-
-@media only screen and (max-width: 768px){
+@media only screen{
     html,
     body{
     width:100%;
